# second-brain

./: .gitignore  Dockerfile  Dockerfile.deepseek-r1.1.5b  README.md  run.sh
Dockerfiles/: Dockerfile.deepseek-r1.1.5b
broca/: README.md  main.py  pyproject.toml
broca/helm/: Chart.yaml  values.yaml
broca/helm/templates/: role.yaml  rolebinding.yaml  serviceaccount.yaml
broca/src/config/: constants.py
broca/src/helm/: commands.py
broca/src/kube/: commands.py
broca/src/ollama/: requests.py
broca/src/utils/: shell_commands.py
src/: main.py  pyproject.toml
src/kube/: commands.py
src/shell/: commands.py
