[tool.poetry]
name = "broca"
version = "0.1.0"
description = ""
authors = ["tristan <tkornacki@rapidsos.com>"]
readme = "README.md"

packages = [
    { include = "src", from = "." },
]

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.18"
ollama = "^0.4.7"
kubernetes = "^32.0.0"
langchain-community = "^0.3.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
